Updated adoption title

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         This is the nav.
-
     </nav>
 
     <div class="container">
@@ -86,7 +85,7 @@
     <div class="row row-content">
         <div class="col-sm-4">
             <div class="card">
-                <h3 class="card-header bg-warning text-black">Adopt</h3>
+                <h3 class="card-header bg-warning text-black"> Click here to Adopt</h3>
                 <div class="card-body">
                     <dl class="row">
                         <dt class="col-6">Founded</dt>
