added adopt and get involved pages

--- a/adopt.html
+++ b/adopt.html
@@ -41,12 +41,85 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href="index.html" style="color: black" ><i class="fa fa-home fa-lg"></i> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#" style="color: black" ><i class="fa fa-info fa-lg"></i>Adopt</a></li>
-                    <li class="nav-item"><a class="nav-link" href="donate.html" style="color: black"><i class="fa fa-list fa-lg"></i> Donate</a></li>
-                    <li class="nav-item"><a class="nav-link" href="volunteer.html" style="color: black"><i class="fa fa-address-card fa-lg"></i> Volunteer</a></li>
-                    
+                    <li class="nav-item"><a class="nav-link" href="getinvolved.html" style="color: black"><i class="fa fa-list fa-lg"></i>Get Involved</a></li>
                 </ul>
             </div>
         </div> 
     </nav>
-    Adopt
+
+    <div class="text-center">
+        <header class="adopt-header">
+            Adoptions
+        </header>
+            <p>
+                Thank you for choosing to adopt your new family member from Boombat's Dog House. 
+                We'd be delighted to help you make the right match and adopt an animal.  
+                We will make every effort to ensure that the adoption experience will be positive for you, your household members and your new pet.
+            </p>
+    </div>
+    
+    <div class="row mx-auto">
+        <div class="col adopt-card">
+            <div class="card text-center" style="width: 400px; height: 450px;">
+                <h1 class="card-header text-black">Pongo</h1>
+                <img src="images/pongo.jpg" class="card-img-top" alt="pongo">
+                <div class="card-body">
+                <p class="card-text">Pongo is a 3 year old, male Dalmatian.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col adopt-card">
+            <div class="card text-center" style="width: 400px; height: 450px;">
+                <h1 class="card-header text-black">Wishbone</h1>
+                <img src="images/wishbone.jpg" class="card-img-top" alt="wishbone">
+                <div class="card-body">
+                <p class="card-text">Wishbone is a 2 year old, male Jack Russel Terrier.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col adopt-card">
+            <div class="card text-center" style="width: 400px; height: 450px;">
+                <h1 class="card-header text-black">Chance</h1>
+                <img src="images/bulldogchance.jpg" class="card-img-top" alt="chance">
+                <div class="card-body">
+                <p class="card-text">Chance is a 1 year old, male American Bulldog.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col adopt-card">
+            <div class="card text-center" style="width: 400px; height: 450px;">
+                <h1 class="card-header text-black">Beethoven</h1>
+                <img src="images/beethoven.jpg" class="card-img-top" alt="Beethoven">
+                <div class="card-body">
+                <p class="card-text">Beethoven is a 4 year old, male St. Bernard.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col adopt-card">
+            <div class="card text-center" style="width: 400px; height: 450px;">
+                <h1 class="card-header text-black">Batman</h1>
+                <img src="images/batman.jpg" class="card-img-top" alt="batman">
+                <div class="card-body">
+                <p class="card-text">Batman is a 13 year old, female Maltese mix.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col adopt-card">
+            <div class="card text-center" style="width: 400px; height: 450px;">
+                <h1 class="card-header text-black">Boomhauer</h1>
+                <img src="images/boomhauer.jpg" class="card-img-top" alt="boom">
+                <div class="card-body">
+                <p class="card-text">Boom is a 3 year old, male Elkhound mix.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+       <!-- build:js js/main.js -->
+   <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+   <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+   <script src="javascript/scripts.js"></script>
+   <!-- endbuild -->         
 </body>
+
+</html>
