--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href="#" style="color: black" ><i class="fa fa-home fa-lg"></i> Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="adopt.html" style="color: black" ><i class="fa fa-info fa-lg"></i>Adopt</a></li>
-                    <li class="nav-item"><a class="nav-link" href="donate.html" style="color: black"><i class="fa fa-list fa-lg"></i> Donate</a></li>
-                    <li class="nav-item"><a class="nav-link" href="volunteer.html" style="color: black"><i class="fa fa-address-card fa-lg"></i> Volunteer</a></li>
-                    
+                    <li class="nav-item"><a class="nav-link" href="getinvolved.html" style="color: black"><i class="fa fa-list fa-lg"></i>Get Involved</a></li>
                 </ul>
             </div>
         </div> 
@@ -96,10 +94,10 @@
                 </div>
             </div> 
         </div>
-    <div class="row row-content">
+    <div class="row row-content mx-auto">
         <div class="col-sm-4">
             <div class="card">
-                <h3 class="card-header bg-warning text-black"><a href="adopt.html" style="color:black">Adopt</a></h3>
+                <h3 class="card-header bg-secondary text-black"><a href="adopt.html" style="color:black">Adopt</a></h3>
                 <div class="card-body">
                     <dl class="row">
                         <p class="col">Here at Boombat's dog house we try to make the adoption process as smooth as possible. Our knowledgable staff is happy to help with any questions you may have throughout the process.</p>
@@ -110,7 +108,7 @@
 
         <div class="col-sm-4">
             <div class="card">
-                <h3 class="card-header bg-warning text-black"><a href="donate.html" style="color:black">Donate</a></h3>
+                <h3 class="card-header bg-secondary text-black"><a href="donate.html" style="color:black">Donate</a></h3>
                 <div class="card-body">
                     <dl class="row">
                         <p class="col">We accept donations such as food, towels, blankets, and toys as well as cash donations that help our resident animals maintain a healthy and comfortable life while staying at the Doghouse.</p>
@@ -121,7 +119,7 @@
         </div>
         <div class="col-sm-4">
             <div class="card">
-                <h3 class="card-header bg-warning text-black"><a href="volunteer.html" style="color:black">Volunteer</a></h3>
+                <h3 class="card-header bg-secondary text-black"><a href="volunteer.html" style="color:black">Volunteer</a></h3>
                 <div class="card-body">
                     <dl class="row">
                         <p class="col">We are always in need of volunteers at the shelter, as well as at our monthly adoption events. We have a full list of types of help that we need as well as time and locations of events.</p>  
@@ -132,13 +130,13 @@
     </div>
    
     <footer>
-        
+
     </footer>
    <!-- build:js js/main.js -->
    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-   <script src="js/scripts.js"></script>
+   <script src="javascript/scripts.js"></script>
    <!-- endbuild -->
 </body>
 
