--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
      <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet" />
      <link rel="stylesheet" href="css/styles.css" />
+     <script src="https://kit.fontawesome.com/d26b6fa9c6.js" crossorigin="anonymous"></script>
 
  
     <title>Boombat's Dog House</title>
@@ -42,8 +43,8 @@
             <div class="collapse navbar-collapse" id="doghouseNavbar">
                 <ul class="navbar-nav">
                     <li class="nav-item active"><a class="nav-link" href="#" style="color: black" ><i class="fa fa-home fa-lg"></i> Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="adopt.html" style="color: black" ><i class="fa fa-info fa-lg"></i>Adopt</a></li>
-                    <li class="nav-item"><a class="nav-link" href="getinvolved.html" style="color: black"><i class="fa fa-list fa-lg"></i>Get Involved</a></li>
+                    <li class="nav-item"><a class="nav-link" href="adopt.html" style="color: black" ><i class="fa-solid fa-paw"></i> Adopt</a></li>
+                    <li class="nav-item"><a class="nav-link" href="getinvolved.html" style="color: black"><i class="fa-solid fa-handshake-angle"></i> Get Involved</a></li>
                 </ul>
             </div>
         </div> 
@@ -108,7 +109,7 @@
 
         <div class="col-sm-4">
             <div class="card">
-                <h3 class="card-header bg-secondary text-black"><a href="donate.html" style="color:black">Donate</a></h3>
+                <h3 class="card-header bg-secondary text-black"><a href="getinvolved.html" style="color:black">Donate</a></h3>
                 <div class="card-body">
                     <dl class="row">
                         <p class="col">We accept donations such as food, towels, blankets, and toys as well as cash donations that help our resident animals maintain a healthy and comfortable life while staying at the Doghouse.</p>
@@ -119,7 +120,7 @@
         </div>
         <div class="col-sm-4">
             <div class="card">
-                <h3 class="card-header bg-secondary text-black"><a href="volunteer.html" style="color:black">Volunteer</a></h3>
+                <h3 class="card-header bg-secondary text-black"><a href="getinvolved.html" style="color:black">Volunteer</a></h3>
                 <div class="card-body">
                     <dl class="row">
                         <p class="col">We are always in need of volunteers at the shelter, as well as at our monthly adoption events. We have a full list of types of help that we need as well as time and locations of events.</p>  
@@ -129,9 +130,32 @@
         </div>
     </div>
    
-    <footer>
-
+    <footer class="site-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 col-sm-2 offset-1">
+                    <h5>Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="adopt.html">Adopt</a></li>
+                        <li><a href="getinvolved.html">Get Involved</a></li>
+                    </ul>
+                </div>
+                <div class="col-6 col-sm-5 text-center">
+                    <h5>Social</h5>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+                    
+                </div>
+                <div class="col-sm-4 text-center">
+                    <a role="button" class="btn btn-link" href="tel:+12065551234"><i class="fa fa-phone"></i> 1-234-555-1234</a><br/>
+                    <a role="button" class="btn btn-link" href="mailto:adopt@bbdoghouse.com"><i class="fa fa-envelope-o"></i> adopt@bbdoghouse.com</a>
+                </div>
+            </div>
+        </div>        
     </footer>
+
    <!-- build:js js/main.js -->
    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
